--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ ul {
   padding: 0px;
 }
 li,
-h3 {
+h1,
+h2 {
   list-style: none;
 }
 input,
@@ -60,7 +61,8 @@ button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
+h1,
+h2
 label[for="new-task"] {
   color: #333;
   font-weight: 700;
@@ -87,7 +89,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-caption {
   display: block;
   margin: 0 0 20px;
 }
