refactor(basic-3.1, 3.3; extended-2.1): add single style for selector with BEM

--- a/style.css
+++ b/style.css
@@ -10,29 +10,30 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.header__img {
   width: 100%;
 }
-.header .more_inf {
+.header__info {
   font-family: fantasy, cursive;
 }
 
-@media (max-width: 768px) {
+@media (max-width:768px) {
   .header {
     text-align: center;
   }
 }
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.list__item-text,
+.list__item-label {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.task-wrapper {
   display: flex;
 }
 ul {
@@ -62,7 +63,7 @@ button:hover {
 }
 /* Heading */
 h1,
-h2
+h2,
 label[for="new-task"] {
   color: #333;
   font-weight: 700;
@@ -89,7 +90,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-.add-caption {
+.section__title {
   display: block;
   margin: 0 0 20px;
 }
@@ -123,12 +124,12 @@ li > label {
 li >  input[type="text"] {
   width: 226px;
 }
-button.delete img {
+button.btn--delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.btn--delete img:hover {
   transform: rotateZ(0);
 }
 
@@ -143,11 +144,11 @@ ul li input[type=text] {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+ul li.list__item--editmode input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+ul li.list__item--editmode label {
   display: none;
 }
