refactor(basic-3.4): replace tag selectors

--- a/style.css
+++ b/style.css
@@ -36,20 +36,19 @@ body {
 .task-wrapper {
   display: flex;
 }
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
-li,
-h1,
-h2 {
+.list__item,
+.section__title {
   list-style: none;
 }
-input,
-button{
+.list__item-checkbox,
+.btn {
   outline: none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -58,12 +57,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h1,
-h2,
+.section__title,
 label[for="new-task"] {
   color: #333;
   font-weight: 700;
@@ -73,7 +71,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.list__item-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -85,7 +83,7 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.list__item-text:focus {
   color: #333;
 }
 
@@ -94,12 +92,12 @@ input[type="text"]:focus {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -108,47 +106,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.list__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list__item-checkbox {
   margin: 0 10px;
 }
-li > label {
+.list__item-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >  input[type="text"] {
+.list__item-text {
   width: 226px;
 }
-button.btn--delete img {
+.btn__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.btn--delete img:hover {
+.btn__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .list__item-label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list__item .list__item-text {
   display: none;
 }
 
-ul li.list__item--editmode input[type=text] {
+.list__item--editmode .list__item-text {
   display: inline-block;
   width: 224px;
 }
 
-ul li.list__item--editmode label {
+.list__item--editmode .list__item-label {
   display: none;
 }
